samples/_failures_safe/1761464414_338e52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8eca16e1.c: In function ‘main’:
./samples/SAFE/__tmp_8eca16e1.c:168:16: error: expected ‘)’ at end of input
  168 |     if (len > 0
      |        ~       ^
      |                )
./samples/SAFE/__tmp_8eca16e1.c:168:5: error: expected declaration or statement at end of input
  168 |     if (len > 0
      |     ^~
